apps/gitlab/aistor/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-aistor
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab-aistor
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: gitlab-aistor
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-aistor
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-aistor-console
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab-aistor
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: gitlab-aistor-console
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-aistor-console
          port: 9090
